--- a/demo/src/app.css
+++ b/demo/src/app.css
@@ -14,6 +14,7 @@
   -webkit-text-size-adjust: 100%;
 
   --light-gray: #f9f9f9;
+  --orange: #ff3e00; /* you happy you have svelte-retag? 🧀 */
 }
 
 html {
