--- a/demo/src/app.css
+++ b/demo/src/app.css
@@ -1,20 +1,23 @@
 :root {
+  --dark-gray: #242424;
+  --light-gray: #f9f9f9;
+  --orange: #ff3e00;
+  --text-color: var(--light-gray);
+  --link-color: #646cff;
+  --link-hover: #535bf2;
+
+  color-scheme: light dark;
+  color: var(--text-color);
+  background-color: var(--dark-gray);
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-  --light-gray: #f9f9f9;
-  --orange: #ff3e00; /* you happy you have svelte-retag? 🧀 */
 }
 
 html {
@@ -23,11 +26,12 @@ html {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--link-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  /* simpler across light/dark themes */
+  opacity: 0.9;
 }
 
 body {
@@ -69,7 +73,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--link-color);
 }
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -85,13 +89,7 @@ code {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    --text-color: var(--dark-gray);
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: var(--light-gray);
   }
 }
