--- a/demo/src/app.css
+++ b/demo/src/app.css
@@ -79,7 +79,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-code {
+code, pre {
   background: var(--light-gray);
   padding: 2px 4px;
   border: 1px solid #ccc;
